<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2025-2026 Dezz (https://github.com/DezzK)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/brickDateBlock"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/brickDateShowDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/optionsMarginSmall"
        android:minHeight="@dimen/optionsLineHeight"
        android:text="@string/show_date"
        android:textAppearance="?attr/textAppearanceBodyLarge" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/brickDateShowDayOfWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/optionsMarginSmall"
        android:minHeight="@dimen/optionsLineHeight"
        android:text="@string/show_day_of_the_week"
        android:textAppearance="?attr/textAppearanceBodyLarge" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/brickDateShowFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/optionsMarginSmall"
        android:minHeight="@dimen/optionsLineHeight"
        android:text="@string/show_full_day_and_month"
        android:textAppearance="?attr/textAppearanceBodyLarge" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/brickDateBeforeDayOfWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/optionsMarginSmall"
        android:minHeight="@dimen/optionsLineHeight"
        android:text="@string/date_before_day_of_week"
        android:textAppearance="?attr/textAppearanceBodyLarge" />

    <com.google.android.material.materialswitch.MaterialSwitch
        android:id="@+id/brickDateOneLineLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/optionsMarginSmall"
        android:minHeight="@dimen/optionsLineHeight"
        android:text="@string/one_line_layout"
        android:textAppearance="?attr/textAppearanceBodyLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/optionsMargin"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/brickDateStatusAlignmentLayout"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/optionsMarginSmall"
            android:layout_weight="1"
            android:hint="@string/brick_status_alignment"
            android:visibility="gone">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/brickDateStatusAlignmentDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/brick_text_alignment">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/brickDateAlignmentDropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</LinearLayout>
