<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © 2025-2026 Dezz (https://github.com/DezzK)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/presetsRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/presetsToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/presets_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/presetsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingHorizontal="@dimen/optionsMargin"
        android:paddingTop="@dimen/optionsMargin"
        android:paddingBottom="@dimen/optionsMargin"
        android:scrollbars="vertical"
        tools:listitem="@layout/preset_item" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSurface"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/optionsMargin">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/presetsSaveCurrentButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:icon="@drawable/ic_save_preset"
            android:text="@string/preset_save_current" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/presetsImportButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/optionsMarginSmall"
            android:layout_weight="1"
            app:icon="@drawable/ic_import_preset"
            android:text="@string/menu_import_preset" />
    </LinearLayout>

</LinearLayout>
